# FAA-demo

./: .gitignore  CONTRIBUTING.md  Flow.md  Makefile  README.md  pyproject.toml  requirements.txt
.local-icu/: libicudata.73.dylib  libicui18n.73.dylib  libicuuc.73.dylib
diagrams/: feature1-architecture.mmd  feature1-state.mmd  langgraph-state-flow.mmd
docs/: CODE_COMMENT_GUIDELINES.md  DEMO_GUIDE.md  DEVELOPER_GUIDE.md  FAA_DEMO_GUIDE.md  PYTHON_SETUP.md  RUNBOOK.md  data_schema.md
notebooks/: 01_data_eda.ipynb
outputs/: baseline_llm_runs_20260216T012548Z.csv  baseline_llm_runs_with_weaviate_20260216T053228Z.csv  baseline_llm_runs_with_weaviate_20260216T154152Z.csv  baseline_llm_runs_with_weaviate_20260216T155014Z.csv  baseline_llm_runs_with_weaviate_20260216T155902Z.csv  baseline_llm_runs_with_weaviate_20260216T160552Z.csv  baseline_llm_runs_with_weaviate_20260216T170030Z.csv  scenario_sweep_baseline_20260216T163249Z.csv  scenario_sweep_baseline_20260216T164139Z.csv  scenario_sweep_baseline_20260216T164213Z.csv  scenario_sweep_baseline_20260216T165224Z.csv  scenario_sweep_baseline_20260216T165234Z.csv  scenario_sweep_baseline_20260216T165248Z.csv  scenario_sweep_baseline_20260216T165256Z.csv  scenario_sweep_baseline_20260216T170057Z.csv  scenario_sweep_baseline_20260216T170108Z.csv  scenario_sweep_baseline_20260216T170117Z.csv  scenario_sweep_baseline_20260216T170126Z.csv  scenario_sweep_baseline_20260216T170135Z.csv  scenario_sweep_baseline_20260216T170826Z.csv  scenario_sweep_baseline_20260216T170842Z.csv  scenario_sweep_baseline_20260216T170856Z.csv  (+2 more)
(+59 files in other folders)
